user/eww: fix linebar alignment

--- a/res/eww/eww.scss
+++ b/res/eww/eww.scss
@@ -54,7 +54,7 @@ window {
     font-size: 0;
 
     button {
-        padding: 0 17px;
+        padding: 0 13px;
     }
 
     .empty {
